force-app/main/default/objects/tc9_pr__Pay_Code__c/tc9_pr__Pay_Code__c.object-meta.xml
<CustomObject>
    <label>Pay Code</label>
    <nameField>
        <label>Pay Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>