force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_eau__ATO_Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__ATO_Deduction_Type__c</fullName>
    <description>Use Global ATO Deduction Type Picklist</description>
    <label>ATO Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_eau__ATO_Deduction_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>