force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_et__Invoice_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Rate_Multiplier__c</fullName>
    <description>The invoice multiplier used when calculating invoice rates using template groups.</description>
    <label>Invoice Rate Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>