force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_et__Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Sort_Order__c</fullName>
    <description>The Sort Order applied to the related Pay Code. The sort order controls ordering within Timesheet Manager and on Invoice PDFs</description>
    <inlineHelpText>The Sort Order applied to the related Pay Code. The sort order controls ordering within Timesheet Manager and on Invoice PDFs</inlineHelpText>
    <label>Sort Order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>