force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__ATO_Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ATO_Allowance_Type__c</fullName>
    <description>Indicates how this allowance pay code will be reported during STP.  Where the allowance should be added to the gross pay and not reported separately please select &apos;Gross&apos;.</description>
    <inlineHelpText>Indicates how this allowance pay code will be reported during STP.  Where the allowance should be added to the gross pay and not reported separately please select &apos;Gross&apos;.</inlineHelpText>
    <label>ATO Allowance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ATO_Allowance_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>