force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__ATO_Other_Allowance_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ATO_Other_Allowance_Type_Description__c</fullName>
    <description>If the ATO Allowance Type is Other then define the description here.</description>
    <inlineHelpText>If the ATO Allowance Type is Other then define the description here.</inlineHelpText>
    <label>ATO Other Allowance Type Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>