force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__AU_Payroll_Tax_Report_Exceptions__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Payroll_Tax_Report_Exceptions__c</fullName>
    <description>Where a pay code is reportable for payroll tax list any localities here where the pay code is considered not reportable.</description>
    <label>AU Payroll Tax Report Exceptions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__AU_Payroll_Tax_Localities</valueSetName>
    </valueSet>
</CustomField>