force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__AU_Payroll_Tax_Reportable__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__AU_Payroll_Tax_Reportable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the pay code will be considered during 2cloudnien Payroll Tax reporting processing</description>
    <label>AU Payroll Tax Reportable?</label>
    <type>Checkbox</type>
</CustomField>