force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Contributes_to_Allowance_Qty_Worked__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contributes_to_Allowance_Qty_Worked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the units worked of this pay code will be summed during Pay Batch Calculation for the purpose of Quantity Based Allowance Calculation.</description>
    <inlineHelpText>Indicates whether the units worked of this pay code will be summed during Pay Batch Calculation for the purpose of Quantity Based Allowance Calculation.</inlineHelpText>
    <label>Contributes to Allowance Qty Worked</label>
    <type>Checkbox</type>
</CustomField>