force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Contributes_to_ETP__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contributes_to_ETP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Pay Code Contributes to ETP</description>
    <inlineHelpText>Indicates if the Pay Code Contributes to ETP</inlineHelpText>
    <label>Contributes to ETP</label>
    <type>Checkbox</type>
</CustomField>