force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Contributes_to_OTE__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contributes_to_OTE__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Pay Code Contributes to OTE</description>
    <inlineHelpText>Indicates if the Pay Code Contributes to OTE</inlineHelpText>
    <label>Contributes to OTE</label>
    <type>Checkbox</type>
</CustomField>