force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Contributes_to_Qualifying_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contributes_to_Qualifying_Earnings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Pay Code Contributes to Qualifying Earnings</description>
    <inlineHelpText>Indicates if the Pay Code Contributes to Qualifying Earnings</inlineHelpText>
    <label>Contributes to Qualifying Earnings</label>
    <type>Checkbox</type>
</CustomField>