force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Contributes_to_RESC__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contributes_to_RESC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Pay Code Contributes to RESC</description>
    <inlineHelpText>Indicates if the Pay Code Contributes to RESC</inlineHelpText>
    <label>Contributes to RESC</label>
    <type>Checkbox</type>
</CustomField>