force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Contributes_to_Total_Quantity__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Contributes_to_Total_Quantity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this pay code record contributes to the Total Quantity sum displayed in Pay Batch Manager and record in Payee Pay Batch records.</description>
    <inlineHelpText>Indicates whether this pay code record contributes to the Total Quantity sum displayed in Pay Batch Manager and record in Payee Pay Batch records.</inlineHelpText>
    <label>Contributes to Total Quantity</label>
    <type>Checkbox</type>
</CustomField>