force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Deduction_Reduces_Qualifying_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Reduces_Qualifying_Earnings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a pre-tax deduction reduces Qualifying Earnings, or not</description>
    <inlineHelpText>Indicates whether a pre-tax deduction reduces Qualifying Earnings, or not</inlineHelpText>
    <label>Deduction Reduces Qualifying Earnings</label>
    <type>Checkbox</type>
</CustomField>