force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Deduction_Type__c</fullName>
    <description>Indicates whether Payee Deduction records using this pay code will be calculated before or after taxes.</description>
    <inlineHelpText>Indicates whether Payee Deduction records using this pay code will be calculated before or after taxes.</inlineHelpText>
    <label>Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pre-tax Deduction</fullName>
            </value>
            <value>
                <fullName>Post-tax Deduction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>