force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Description__c</fullName>
    <description>User friendly description of this pay code.</description>
    <inlineHelpText>User friendly description of this pay code.</inlineHelpText>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>