force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__ETP_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__ETP_Type__c</fullName>
    <description>The ETP Type based on the recognised ATO values</description>
    <inlineHelpText>The ETP Type based on the recognised ATO values</inlineHelpText>
    <label>ETP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__ETP_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>