force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Excess_SGC_Refund__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Excess_SGC_Refund__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this pay code will be used automatically when Ordinary Time Earnings cross the maximum contribution base and the payee is due to be paid the excess refund</description>
    <inlineHelpText>Indicates that this pay code will be used automatically when Ordinary Time Earnings cross the maximum contribution base and the payee is due to be paid the excess refund</inlineHelpText>
    <label>Excess SGC Refund</label>
    <type>Checkbox</type>
</CustomField>