force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Exclude_From_Pay_Advice__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Exclude_From_Pay_Advice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that any transactions related to this Pay Code will not be displayed on the standard Pay Advice PDF.</description>
    <inlineHelpText>Indicates that any transactions related to this Pay Code will not be displayed on the standard Pay Advice PDF.</inlineHelpText>
    <label>Exclude From Pay Advice</label>
    <type>Checkbox</type>
</CustomField>