force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__GST_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__GST_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to true any transactions using this Pay Code will not attract GST during Australian contractor payroll calculation.</description>
    <inlineHelpText>When set to true any transactions using this Pay Code will not attract GST during Australian contractor payroll calculation.</inlineHelpText>
    <label>GST Exempt?</label>
    <type>Checkbox</type>
</CustomField>