force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Include_In_Payroll_Distribution__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Include_In_Payroll_Distribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that pay transactions using this pay code will be included in the pay transaction distribution process where this checkbox is True.</description>
    <inlineHelpText>Indicates that pay transactions using this pay code will be included in the pay transaction distribution process where this checkbox is True.</inlineHelpText>
    <label>Include in Payroll Distribution</label>
    <type>Checkbox</type>
</CustomField>