force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Lump_Sum_A_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Lump_Sum_A_Type__c</fullName>
    <description>The Lump Sum A Type as defined by the Payment Summary Classification</description>
    <inlineHelpText>The Lump Sum A Type as defined by the Payment Summary Classification</inlineHelpText>
    <label>Lump Sum A Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Lump_Sum_A_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>