force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Pay_Advice_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Description__c</fullName>
    <description>Pay Code description that will be displayed to an employee on their pay advice</description>
    <inlineHelpText>Pay Code description that will be displayed to an employee on their pay advice</inlineHelpText>
    <label>Pay Advice Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>