force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Pay_Advice_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Advice_Sort_Order__c</fullName>
    <description>Define the order in which pay codes will be displayed on Pay Advice PDFs</description>
    <inlineHelpText>Define the order in which pay codes will be displayed on Pay Advice PDFs</inlineHelpText>
    <label>Pay Advice Sort Order</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>