force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Pay_Rate_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Rate_Multiplier__c</fullName>
    <description>The multiplier which will be applied to Pay Transactions using this pay code.</description>
    <inlineHelpText>The multiplier which will be applied to Pay Transactions using this pay code.</inlineHelpText>
    <label>Pay Rate Multiplier</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>