force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__PAYE_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYE_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Pay Transactions using this pay code will count toward the taxable earnings or the non-taxable earnings of the payee.</description>
    <inlineHelpText>Indicates whether Pay Transactions using this pay code will count toward the taxable earnings or the non-taxable earnings of the payee.</inlineHelpText>
    <label>PAYE Exempt</label>
    <type>Checkbox</type>
</CustomField>