force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__PAYG_Marginal_Tax__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__PAYG_Marginal_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether marginal taxation should be applied to earnings using this pay code</description>
    <inlineHelpText>Indicates whether marginal taxation should be applied to earnings using this pay code</inlineHelpText>
    <label>PAYG Marginal Tax</label>
    <type>Checkbox</type>
</CustomField>