force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__Payroll_Tax_Locations__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Payroll_Tax_Locations__c</fullName>
    <description>Records the Record IDs of the Locations to which Payroll Tax will apply for this Pay Code</description>
    <inlineHelpText>Records the Record IDs of the Locations to which Payroll Tax will apply for this Pay Code</inlineHelpText>
    <label>Payroll Tax Locations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>