force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__SGC_Calculation_Impact__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__SGC_Calculation_Impact__c</fullName>
    <description>Defines how a deduction will be treated in relation to Superannuation Guarantee Charge (SGC) - obsolete as at 1 January 2020.</description>
    <inlineHelpText>Defines how a deduction will be treated in relation to Superannuation Guarantee Charge (SGC) - obsolete as at 1 January 2020.</inlineHelpText>
    <label>SGC Calculation Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Impact</fullName>
                <default>true</default>
                <label>No Impact</label>
            </value>
            <value>
                <fullName>Reduces OTE and Offsets SGC Contribution</fullName>
                <isActive>false</isActive>
                <label>Reduces OTE and Offsets SGC Contribution</label>
            </value>
            <value>
                <fullName>Reduces Ordinary Time Earnings (OTE)</fullName>
                <isActive>false</isActive>
                <label>Reduces Ordinary Time Earnings (OTE)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>