force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__STP_Allowance_Other_Description__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP_Allowance_Other_Description__c</fullName>
    <description>Defines what description will be reported in STP when the STP Allowance Type is Other.</description>
    <inlineHelpText>Defines what description will be reported in STP when the STP Allowance Type is Other.</inlineHelpText>
    <label>STP Allowance Other Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>