force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__STP_Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP_Deduction_Type__c</fullName>
    <description>Defines how this deduction pay code will be reported in STP 2.</description>
    <inlineHelpText>Defines how this deduction pay code will be reported in STP 2.</inlineHelpText>
    <label>STP Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__STP2_Deduction_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>