force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__STP_Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP_Leave_Type__c</fullName>
    <description>Defines how this pay code will be reported in STP 2 when it is a paid leave type.</description>
    <inlineHelpText>Defines how this pay code will be reported in STP 2 when it is a paid leave type.</inlineHelpText>
    <label>STP Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__STP2_Leave_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>