force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__STP_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__STP_Payment_Type__c</fullName>
    <description>Defines how a pay code with record type = Payment will be disaggregated in STP 2 reporting.</description>
    <inlineHelpText>Defines how a pay code with record type = Payment will be disaggregated in STP 2 reporting.</inlineHelpText>
    <label>STP Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__STP2_Payment_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>