force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__UK_NI_Class_1_Exempt__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Class_1_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Pay Transactions using this pay code are exempt from employee and employer Class 1 National Insurance contributions.</description>
    <inlineHelpText>Indicates whether Pay Transactions using this pay code are exempt from employee and employer Class 1 National Insurance contributions.</inlineHelpText>
    <label>UK NI Class 1 Exempt</label>
    <type>Checkbox</type>
</CustomField>