force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_pr__UK_NI_Contributes_to_Class_1A__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__UK_NI_Contributes_to_Class_1A__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether Pay Transactions using this pay code will attract employer Class 1A National Insurance contributions, on benefits.</description>
    <inlineHelpText>Indicates whether Pay Transactions using this pay code will attract employer Class 1A National Insurance contributions, on benefits.</inlineHelpText>
    <label>UK NI Contributes to Class 1A</label>
    <type>Checkbox</type>
</CustomField>