force-app/main/default/objects/tc9_pr__Pay_Code__c/fields/tc9_util__PO_Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__PO_Allocation_Type__c</fullName>
    <description>Set the Allocation Type to define which Pay Transactions and Purchase Orders can be matched to this Pay Code.</description>
    <inlineHelpText>Set the Allocation Type to define which Pay Transactions and Purchase Orders can be matched to this Pay Code.</inlineHelpText>
    <label>PO Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_util__PO_Allocation_Types</valueSetName>
    </valueSet>
</CustomField>