force-app/main/default/objects/tc9_pr__Pay_Code__c/recordTypes/tc9_pr__ETP.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__ETP</fullName>
    <active>true</active>
    <label>ETP</label>
</RecordType>