force-app/main/default/objects/tc9_pr__Pay_Code__c/recordTypes/tc9_pr__Expense.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Expense</fullName>
    <active>true</active>
    <label>Expense</label>
</RecordType>