force-app/main/default/objects/tc9_pr__Pay_Code__c/recordTypes/tc9_pr__Lump_Sum.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Lump_Sum</fullName>
    <active>true</active>
    <label>Lump Sum</label>
</RecordType>