force-app/main/default/objects/tc9_pr__Pay_Code__c/recordTypes/tc9_pr__Payment.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Payment</fullName>
    <active>true</active>
    <label>Payment</label>
</RecordType>