force-app/main/default/objects/tc9_pr__Pay_Code__c/listViews/tc9_eau__STP2_Allowance_Pay_Codes.listView-meta.xml
<ListView>
    <fullName>tc9_eau__STP2_Allowance_Pay_Codes</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>tc9_pr__STP_Allowance_Type__c</columns>
    <columns>tc9_pr__STP_Allowance_Other_Description__c</columns>
    <columns>tc9_pr__Pay_Rate_Multiplier__c</columns>
    <columns>tc9_pr__Pay_Advice_Sort_Order__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>tc9_pr__ATO_Allowance_Type__c</columns>
    <columns>tc9_pr__ATO_Other_Allowance_Type_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>tc9_pr__Pay_Code__c.tc9_pr__Allowance</value>
    </filters>
    <label>STP2 Allowance Pay Codes</label>
</ListView>